--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,11 @@
     <string name="play_now">Play Now</string>
     <string name="play_next">Play Next</string>
     <string name="enqueue">Add To Queue</string>
-    <string name="action_settings">Settings</string>
-    <string name="section_format">Hello World from section: %1$d</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="song_name">Billian Billian</string>
+    <string name="artist_time">Guru Randhava    3:49</string>
+    <string name="action_about">About</string>
+    <string name="libraries">Libraries Used</string>
+    <string name="slideup">Slide Up</string>
+    <string name="byme">Made with ♥ in India</string>
+    <string name="about_slideup">SlideUp is a small library that allows you to add sweet slide effect to any view. Slide your views up, down, left or right with SlideUp!</string>
 </resources>
